--- a/style.css
+++ b/style.css
@@ -18,6 +18,11 @@ h1 {
   gap: 1rem;
 }
 
+label {
+  text-align: center;
+  color: var(--primary);
+  font-family: "Urbanist", sans-serif;
+}
 input {
   padding: 1px;
   width: 15rem;
